[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/EasyLAN/EasyLANHost.gd" type="Script" id=1]
[ext_resource path="res://scripts/MainHost.gd" type="Script" id=2]
[ext_resource path="res://assets/title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://styles/background_style.tres" type="StyleBox" id=6]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="root" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyLANHost" type="Node" parent="."]
script = ExtResource( 1 )
auto_broadcast = true

[node name="header" type="HBoxContainer" parent="."]
margin_right = 1900.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_btn" type="Button" parent="header"]
margin_right = 90.0
margin_bottom = 67.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "<"

[node name="title" type="Label" parent="header"]
margin_left = 94.0
margin_top = 3.0
margin_right = 1900.0
margin_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Créer une partie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.5
margin_top = -38.0
margin_right = 101.5
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code_info" type="HBoxContainer" parent="vbox"]
margin_top = 1.0
margin_right = 203.0
margin_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="vbox/code_info"]
margin_left = 20.0
margin_top = 1.0
margin_right = 178.0
margin_bottom = 35.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Code de la partie : "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code" type="Label" parent="vbox/code_info"]
margin_left = 182.0
margin_right = 182.0
margin_bottom = 36.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="waiting" type="Label" parent="vbox"]
margin_top = 41.0
margin_right = 203.0
margin_bottom = 75.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "En attente d'un joueur..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck_selector" type="VBoxContainer" parent="."]
anchor_left = 0.0637823
anchor_top = 0.237137
anchor_right = 0.309774
anchor_bottom = 0.379328
__meta__ = {
"_edit_use_anchors_": true
}

[node name="label" type="Label" parent="deck_selector"]
margin_right = 472.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Sélection du deck"

[node name="select" type="OptionButton" parent="deck_selector"]
margin_top = 38.0
margin_right = 472.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
